# PTTAT-structure

./: .gitmodules  CMakeLists.txt  README.md
DataManager/: CMakeLists.txt
DataManager/includePublic/DataManager/: DataManager.h  Line.h  Position.h  Stop.h  Trip.h  VehicleData.h  VehicleDataContainer.h
DataManager/src/: DataAccess.cpp  DataContainer.cpp  DataManager.cpp  EliminatedPositionShape.cpp  Logger.cpp
include/: GenericException.h  Logger.h  rapidjson_pch.h  spdlog_pch.h
include/DataManager/: DataAccess.h  DataContainer.h  DataManager.h  EliminatedPositionShape.h  PointsFunctions.h  Trip.h  VehicleData.h
libraries/: CMakeLists.txt
libraries/configLib/: CMakeLists.txt  ConfigFile.h  ConfigFilePrepare.h
libraries/fileLib/: CMakeLists.txt  FileLib.h
src/: DataAccess.cpp  DataContainer.cpp  DataManager.cpp  EliminatedPositionShape.cpp  Logger.cpp
